--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^7.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "json-server": "^0.16.1",
+    "konami": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
